--- a/public/index.html
+++ b/public/index.html
@@ -17,21 +17,24 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <label for="targetUrls">Target URL</label>
-                <textarea type="text" class="form-control" id="targetUrls" rows="8" placeholder="輸入多個網址請換行隔開"></textarea>
+                <textarea type="text" class="form-control" id="targetUrls" rows="8" cols="100" placeholder="輸入多個網址請換行隔開"></textarea>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8 offset-md-2 text-right">
+            <div class="col-md-8 offset-md-2 text-right mt-1 mb-2">
                 <button class="btn btn-outline-success btn-lg" type="button" id="submitBtn">GET</button>
             </div>
         </div>
         <div class="row">
-            <div class="col-md text-center" id="result">
-                <img src="img/loading.gif" class="rounded" style="display:none">
+            <div class="col-md text-center">
+                <img src="img/loading.gif" class="rounded" style="display:none" id="loadinImg">
+                <p id="nothing" style="display:none"><strong>沒東西</strong></p>
             </div>
         </div>
+        <div class="row" id="result">
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
