--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,13 @@
         </div>
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <label for="targetUrls">Target URL</label>
+                <label for="targetUrls">請輸入推特或 Instagram 貼文網址:</label>
                 <textarea type="text" class="form-control" id="targetUrls" rows="8" cols="100" placeholder="輸入多個網址請換行隔開"></textarea>
             </div>
         </div>
         <div class="row">
             <div class="col-md-8 offset-md-2 text-right mt-1 mb-2">
+                <button class="btn btn-outline-secondary btn-lg" type="button" id="clearBtn">Clear</button>
                 <button class="btn btn-outline-success btn-lg" type="button" id="submitBtn">GET</button>
             </div>
         </div>
