web dark mode done

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,18 @@
     <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body>
+    <nav class="navbar sticky-top navbar-light bg-light mb-3" id="navBar">
+        <a class="navbar-brand" href="#">94Orig</a>
+        <button type="button" id="darkBtn" class="btn btn-outline-dark" data-toggle="button" aria-pressed="false" autocomplete="off">
+            關燈模式
+        </button>
+    </nav>
     <div class="container">
         <div class="row">
-            <div class="col-md text-center">
-                <h1>94Orig</h1>
+            <div class="col-md-8 offset-md-2 mb-3 text-center">
+                <h1>歡迎來到 94Orig</h1>
+                <h3>最輕量的 instagram & Twitter 原圖下載</h3>
+                <h5>限時動態請輸入帳號網址，並稍候 5~10 秒（限公開帳號）</h5>
             </div>
         </div>
         <div class="row">
@@ -28,7 +36,6 @@
         </div>
         <div class="row">
             <div class="col-md text-center">
-                <img src="img/loading.gif" class="rounded" style="display:none" id="loadinImg">
                 <p id="nothing" style="display:none"><strong>沒東西</strong></p>
             </div>
         </div>
