web color adjust

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,8 @@
         <link rel='stylesheet' href='/css/style.css' />
     </head>
     <body>
-        <nav class="navbar sticky-top navbar-light bg-light mb-3" id="navBar">
+        <nav class="navbar sticky-top mb-3" id="navBar">
             <a class="navbar-brand" href="#">94Orig</a>
-            <button type="button" id="darkBtn" class="btn btn-outline-dark" data-toggle="button" aria-pressed="false" autocomplete="off">
-                關燈模式
-            </button>
         </nav>
         <div class="container">
             <div class="row">
