--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                     <h5>限時動態請輸入帳號網址，並稍候 5~10 秒（限公開帳號）</h5>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <label for="targetUrls">請輸入推特或 Instagram 貼文網址:</label>
                     <textarea type="text" class="form-control" id="targetUrls" rows="8" cols="100" placeholder="輸入多個網址請換行隔開"></textarea>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="row" id="result">
-            </div>
+            </div> -->
         </div>
         <!-- Modal -->
         <div class="modal fade" id="lineModel" tabindex="-1">
